<resources>
    <string name="app_name">Hackaton APP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="video_image">Video Image</string>
    <string name="resumo_da_conta">Resumo da conta</string>
    <string name="produtos">Meus Serviços</string>
    <string name="comprar">Adicionar ao carrinho</string>
    <string name="preco">Preço: R$</string>
    <string name="quantity">Quantidade:</string>
    <string name="item">Item:</string>
    <string name="reais">R$</string>
    <string name="semitotal">Semi-total</string>
    <string name="descriptions">Descrições</string>
    <string name="total">Total</string>

    <string-array name="values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="chat_title">Chat com atendente</string>
    <string name="chat_hint">Comece conversando por aqui...</string>
    <string name="assistente_hint">Vamos lá! Faça uma pergunta para mim :)</string>
    <string name="chat_voce">Você:</string>
    <string name="chat_atendente">Atendente:</string>
    <string name="assistente_title">Assistente Itaú</string>
</resources>
